# CappuSim

./: .gitignore  2d_script.gnu  404.html  CITATION.cff  Cargo.toml  README.md  asset-manifest.json  build.rs  index.html  index.md  main.rs  plot_benchmark.py  plot_benchmark_ptbr.py  plotting.py  setup.cfg  vtk_gui.py
.cargo/: config.toml
.github/workflows/: static.yml
CappuSim/: config.py  graphics.py  lbm.py  stream_collide_kernel.cl  translator.py  utils.py
benchmarks/: benchmark_results_1753463004.csv
docs/: cappusim_doc.html  index.html  index.md  lattelab_doc.html  lattelab_doc.md  lbm_theory.html  lbm_theory.md  package-lock.json  package.json  style.css  usage_guide.html  usage_guide.md
docs/lattelab/: all.html  fn.main.html  index.html  sidebar-items.js
docs/src/: App.css  App.js  App.tsx
examples/: benchmark.py  d2q9.py  d3q19.py  liddriven_cavity.rs  poiseuille.rs  poiseulle.py  simple_obstacle.rs  simple_vortex.rs  taylor_green_vortex.rs  von_karman_vortex.py  von_karman_vortex.rs
plotting_scripts/: 2d_script.gnu  plot.py
src/: lbm.rs  main.rs  mod.rs
src/core/: kernels.rs  lbm.rs  mod.rs
src/examples/: airfoil.rs  couette.rs  liddriven_cavity.rs  mod.rs  poiseuille.rs  taylor_green.rs  von_karman.rs
src/kernels/: kernel_collision.cl  kernel_equilibrium.cl  kernel_stream_collide.cl  kernel_streaming.cl  kernel_swap.cl  kernel_velocity_sets.cl
src/lbm/: check.rs  init.rs  lbm.rs  mod.rs  opencl.rs  output.rs  transforms.rs
tests/: libs.py  test.py
validation/: plot_simulations.py  relatorio_validacao.py  validate.py
(+64 files in other folders)
