[package]
name = "lattelab"
version = "0.1.0"
edition = "2024"

description = "A CFD solver based on LBM and powered by opencl."   # A description of our crate for `crates.io`
keywords = ["CFD", "LBM"]   # Keywords for searches on `crates.io`
#documentation = "" # URL to the crate's documentation
#homepage = ""   # URL to the crate's homepage
repository = "" # URL of the crate's source repository
authors = ["Gustavo A. Verneck"]  # The authors of the crate
#license = ""    # The crate's license
#rust-version = ""  # The minimum supported Rust version

[dependencies]
ocl = "0.19"
colored = "2.1.0"
indicatif = "0.17"
